# rough_idea_project_cars_cpp

./: CMakeLists.txt  LICENSE  README.md  SECURITY.md
.github/workflows/: codeql-analysis.yml  mac_cmake.yml  ubuntu_cmake.yml  win_cmake.yml
app/: main.cpp  maincsv.cpp
inc/: capture.h  consts.h  csvencoder.h  decoder.h  decoder16timeschar64.h  decoder16timesfloat.h  decoder16timesu16.h  decoder16timesu32.h  decoder16vehicleinfo.h  decoder1bit2bit2bit3bit.h  decoder20char.h  decoder2bit3bit.h  decoder2timesu8.h  decoder32participantinfo.h  decoder32participantsstatsinfo.h  decoder3bit.h  decoder3bit3bit.h  decoder3timesfloat.h  decoder3timess16.h  decoder40char.h  decoder4bit4bit.h  decoder4timeschar40.h  decoder4timesfloat.h  decoder4timess16.h  decoder4timesu16.h  decoder4timesu8.h  decoder56participantinfo.h  decoder60classinfo.h  decoder64char.h  decoder6bit2bit.h  decoderboolu16.h  decoderboolu8.h  decoderbottom2bits.h  decoderclassinfo.h  decodercomposite.h  decoderf32.h  decoderls2bits.h  decoderls3bits.h  decoderls4bits.h  decoderls7bits.h  (+65 more)
src/: Packetvehicleclassnamesdata.cpp  capture.cpp  capture.h  consts.h  csvencoder.cpp  decoder.h  decoder16timeschar64.cpp  decoder16timeschar64.h  decoder16timesfloat.cpp  decoder16timesfloat.h  decoder16timesu16.cpp  decoder16timesu16.h  decoder16timesu32.cpp  decoder16timesu32.h  decoder16vehicleinfo.cpp  decoder16vehicleinfo.h  decoder1bit2bit2bit3bit.cpp  decoder1bit2bit2bit3bit.h  decoder20char.cpp  decoder20char.h  decoder2bit3bit.cpp  decoder2bit3bit.h  decoder2timesu8.cpp  decoder2timesu8.h  decoder32participantinfo.cpp  decoder32participantinfo.h  decoder32participantsstatsinfo.cpp  decoder32participantsstatsinfo.h  decoder3bit.cpp  decoder3bit.h  decoder3bit3bit.cpp  decoder3bit3bit.h  decoder3timesfloat.cpp  decoder3timesfloat.h  decoder3timess16.cpp  decoder3timess16.h  decoder40char.cpp  decoder40char.h  decoder4bit4bit.cpp  decoder4bit4bit.h  (+142 more)
tests/: testcapture.cpp  testcsvencoder.cpp  testdecoder1bit2bit2bit3bit.cpp  testdecoder2bit3bit.cpp  testdecoder2timesu8.cpp  testdecoder3bit.cpp  testdecoder3bit3bit.cpp  testdecoder3timesfloat.cpp  testdecoders.cpp  testpacketfactorys.cpp  tests.h
